--- a/EmployeePayrollBlazor/Pages/UpdateEmployee.razor
+++ b/EmployeePayrollBlazor/Pages/UpdateEmployee.razor
@@ -87,6 +87,11 @@
                         </option>
                         <option value="HR">HR</option>
                         <option value="Developer">Developer</option>
+                        <option value="Tester">Tester</option>
+                        <option value="Manger">Manager</option>
+                        <option value="Associate Engineer">Associate Engineer</option>
+                        <option value="Jr Engineer">Junior Engineer</option>
+                        <option value="Sr Engineer">Senior Engineer</option>
                     </select>
                 </div>
             </div>
@@ -95,7 +100,7 @@
                 <label class="label text" for="salary">Choose your Salary: </label>
                 <input class="input" type="number" name="salary" min="30000" max="60000" step="100"
                        defaultvalue="40000" @bind="@model.Salary">
-                <output class="salary-output text" for="salary">400000</output>
+                @*<output class="salary-output text" for="salary">400000</output>*@
             </div>
 
             <div class="row-content">
@@ -109,11 +114,19 @@
             </div>
 
             <div class="buttonParent">
-                <a href="./home.html" class=" button cancelButton" @onclick="@Cancel">Cancel</a>
+                <a href="/show" class=" button cancelButton" @onclick="@Cancel">Cancel</a>
                 <div class="submit-reset">
                     <button type="submit" class="button submitButton Save" id="submitButton">Save</button>
                 </div>
             </div>
+
+            <MatSnackbar @bind-IsOpen="@snackBarIsOpen">
+                <MatSnackbarContent>Updated Successfully!</MatSnackbarContent>
+                <MatSnackbarActions>
+                    <a href="show"><MatButton Raised="true">Go to Dashboard</MatButton></a>
+                </MatSnackbarActions>
+            </MatSnackbar>
+
         </div>
     </EditForm>
 </form>
@@ -121,6 +134,7 @@
 @code {
 
     EmployeeModel model = new EmployeeModel();
+    bool snackBarIsOpen = false;
 
     [Parameter]
     public string id { get; set; }
@@ -130,9 +144,12 @@
         model = await Task.Run(() => Employeemanager.GetEmployeeById(id));
     }
 
-    protected void Update()
+    protected async void Update()
     {
         Employeemanager.UpdateEmployee(model);
+        snackBarIsOpen = true;
+        this.StateHasChanged();
+        await Task.Delay(3000);
         navigationManager.NavigateTo("/show");
     }
     protected void AddImage(string image)
