--- a/EmployeePayrollBlazor/Pages/_Host.cshtml
+++ b/EmployeePayrollBlazor/Pages/_Host.cshtml
@@ -17,6 +17,8 @@
     <link href="css/Employee.css" rel="stylesheet" />
     <link href="css/Display.css" rel="stylesheet" />
     <link href="css/Delete.css" rel="stylesheet" />
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
 </head>
 <body>
     <app>
